tests/NormalTests/paczka1/fuzzy1/18438932.err
Error in line 3: KkH6Sw S540 93,1
Error in line 5: KkH6Sw S50 10,2
Error in line 9: KkH6Sw S921 39,8
Error in line 23: S540 S921 59,5
Error in line 38: qHwckH0Hh S540 18,01
